--- a/css/style.css
+++ b/css/style.css
@@ -198,3 +198,20 @@ width: 3rem;
         height: 293px;
     }
     /* end stuff section */
+
+    /* start team */
+    .team{
+        background-color: var(--section-color);
+
+    }
+    .team h2{
+color: var(--yellow-color);
+    }
+    .team p{
+        width: 550px;
+        margin: auto;
+    }
+    .team .box h4{
+        background-color: var(--green-color);
+    }
+    /* end team */
